# unnamed-ir

./: .editorconfig  .gitignore  .rustfmt.toml  CONTRIBUTING.md  Cargo.toml  LICENCE  LICENCE-APACHE  LICENCE-MIT  README.md  deny.toml  dist-workspace.toml  rust-toolchain.toml
.github/workflows/: release.yml
asm-testing/: build  foo.S  run
asm-testing/lib/: io.S  start_main.S
src/: lib.rs  main.rs
